--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
