--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "daisyui": "^2.50.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
