--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "daisyui": "^2.50.0",
+    "dotenv": "^16.0.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "4"
