--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,9 +14,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-region: us-east-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
       - name: Build Vite App
         run: npm install && npm run build
       - name: Deploy app build to S3 bucket
