--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: production
     steps:
       - uses: actions/checkout@v2
       - name: Configure AWS Credentials
