--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     environment:
       name: Production
     steps:
@@ -17,8 +20,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@master
         with:
           aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::206396605716:role/LabRole
       - name: Build Vite App
         run: npm install && npm run build
       - name: Deploy app build to S3 bucket
