--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,18 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: Production
     permissions:
       id-token: write
       contents: read
-    environment:
-      name: Production
     steps:
       - uses: actions/checkout@v2
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
           aws-region: us-east-1
-          role-to-assume: arn:aws:iam::206396605716:role/LabRole
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Build Vite App
         run: npm install && npm run build
       - name: Deploy app build to S3 bucket
