--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "daisyui": "^2.50.0",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vuex": "4"
