--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dreamonkey/vue-signalr": "^1.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -16,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "@microsoft/signalr": "^7.0.3",
     "daisyui": "^2.50.0",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.2.0",
