--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@microsoft/signalr": "^7.0.3",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
-    "@microsoft/signalr": "^7.0.3",
     "daisyui": "^2.50.0",
+    "dotenv": "^16.0.3",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.2.2",
